--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,10 @@
  *= require_self
  *= require_tree .
  */
+
+ /* add required field asterisk */
+label.required:after {
+    content: " *";
+	color: #FF0000;
+	font-weight: bold;
+}
