--- a/app/views/organization_details/_form.html.erb
+++ b/app/views/organization_details/_form.html.erb
@@ -13,21 +13,25 @@
 
   <div class="field">
     <%= f.label :organization_id %><br>
-    <%= f.text_field :organization_id %>
+	<% if params[:action] == 'new' %>
+	  <%= collection_select(:organization_detail, :organization_id, current_user.organizations.where({fair: true}), :id, :name_and_state) %>
+	<% else %>
+	  <%= f.hidden_field :organization_id, value: :organization_id %><%= @organization_detail.organization.name %>
+	<% end %>
   </div>
   <div class="field">
-    <%= f.label :fair_start_date %><br>
-    <%= f.time_select :fair_start_date %>
+    <%= f.label :fair_start_date, "Contest Year's Fair Start Date" %><br>
+    <%= f.date_select :fair_start_date %>
   </div>
   <div class="field">
-    <%= f.label :fair_end_date %><br>
-    <%= f.time_select :fair_end_date %>
+    <%= f.label :fair_end_date, "Contest Year's Fair End Date" %><br>
+    <%= f.date_select :fair_end_date %>
   </div>
   <div class="field">
-    <%= f.label :total_attendance %><br>
+    <%= f.label :total_attendance, "Total Attendance (Free & Paid Combined)" %><br>
     <%= f.text_field :total_attendance %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit Dates and Attendance" %>
   </div>
 <% end %>
