--- a/app/views/organization_details/index.html.erb
+++ b/app/views/organization_details/index.html.erb
@@ -3,10 +3,12 @@
 <table>
   <thead>
     <tr>
-      <th>Organization</th>
+      <th>Organization ID</th>
+	  <th>Name</th>
       <th>Fair start date</th>
       <th>Fair end date</th>
       <th>Total attendance</th>
+	  <th>Division</th>
       <th></th>
       <th></th>
       <th></th>
@@ -17,9 +19,11 @@
     <% @organization_details.each do |organization_detail| %>
       <tr>
         <td><%= organization_detail.organization_id %></td>
+		<td><%= organization_detail.organization.name %></td>
         <td><%= organization_detail.fair_start_date %></td>
         <td><%= organization_detail.fair_end_date %></td>
         <td><%= organization_detail.total_attendance %></td>
+		<td><%= sanitize(organization_detail.organization.which_division) %></td>
         <td><%= link_to 'Show', organization_detail %></td>
         <td><%= link_to 'Edit', edit_organization_detail_path(organization_detail) %></td>
         <td><%= link_to 'Destroy', organization_detail, method: :delete, data: { confirm: 'Are you sure?' } %></td>
