--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -14,6 +14,7 @@
       <th>Phone</th>
       <th>Fair</th>
       <th>Enabled</th>
+	  <th>Division</th>
       <th></th>
       <th></th>
       <th></th>
@@ -34,6 +35,7 @@
         <td><%= organization.phone %></td>
         <td><%= organization.fair %></td>
         <td><%= organization.enabled %></td>
+		<td><%= sanitize(organization.which_division) %></td>
         <td><%= link_to 'Show', organization %></td>
         <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
         <td><%= link_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
