--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -55,5 +55,10 @@
   <%= @organization.enabled %>
 </p>
 
+<p>
+  <strong>Division:</strong>
+  <%= sanitize(@organization.which_division) %>
+</p>
+
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
-<%= link_to 'Back', organizations_path %>
+<%= link_to 'Link this organization to your user account.', new_user_organization_path %>
