--- a/app/views/user_organizations/index.html.erb
+++ b/app/views/user_organizations/index.html.erb
@@ -15,8 +15,8 @@
   <tbody>
     <% @user_organizations.each do |user_organization| %>
       <tr>
-        <td><%= user_organization.user_id %></td>
-        <td><%= user_organization.organization_id %></td>
+        <td><%= user_organization.user.first_name %> <%= user_organization.user.last_name %></td>
+        <td><%= user_organization.organization.name %></td>
         <td><%= user_organization.primary %></td>
         <td><%= link_to 'Show', user_organization %></td>
         <td><%= link_to 'Edit', edit_user_organization_path(user_organization) %></td>
