--- a/app/views/submission_details/edit.html.erb
+++ b/app/views/submission_details/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @submission_detail %> |
-<%= link_to 'Back', submission_details_path %>
+<%= link_to 'Show', @submission_detail %>
