--- a/app/views/submissions/_form.html.erb
+++ b/app/views/submissions/_form.html.erb
@@ -87,6 +87,10 @@
     <% end %>
   <% end %>
   <div class="actions">
+  	<% if params[:action] == 'new' %>
     <%= f.submit "Next: Upload Submission Documents" %>
-  </div>
+  <% else %>
+    <%= f.submit "Next: Update Submission Documents" %>
+  <% end %>
+    </div>
 <% end %>
