--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 <li style="display:inline; padding-left:20px;"><%= link_to "Awards", awards_path %></li>
 <li style="display:inline; padding-left:20px;"><%= link_to "Divisions", divisions_path %></li>
 <li style="display:inline; padding-left:20px;"><%= link_to "Categories", categories_path %></li>
-<li style="display:inline; padding-left:20px;"><%= link_to "Submissions", submissions_path %></li>
+<li style="display:inline; padding-left:20px;"><%= link_to "Submissions", '#' %></li>
 <li style="display:inline; padding-left:20px;"><%= link_to "Judges", judges_path %></li>
 <li style="display:inline; padding-left:20px;"><%= link_to "Scores", scores_path %></li>
 <li style="display:inline; padding-left:20px;"><%= link_to "Score Items", score_items_path %></li>
