--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -31,8 +31,8 @@
 </p>
 
 <p>
-  <strong>Approved:</strong>
-  <%= @submission.approved %>
+  <strong>Status:</strong>
+  <%= @submission.status %>
 </p>
 
 <p>
