--- a/app/views/submissions/_form.html.erb
+++ b/app/views/submissions/_form.html.erb
@@ -13,8 +13,8 @@
   
   <div class="field">
     <%= f.label :category_id %><br>
-    <%= collection_select(:submission, :category_id, Category.sort_by_category_codes(Category.all), :id, :award_code_category,
-      include_blank: "Select the category you wish to enter") %>
+    <%= f.hidden_field :category_id, value: @category.id %> 
+    <%= @category.award_code_category %>
   </div>
   <div class="field">
   	<%= f.label :user_id, "Submitted By" %><br>
@@ -25,6 +25,13 @@
     <%= f.label :organization_id, "Organization of Submission" %><br>
     <%= collection_select(:submission, :organization_id, current_user.organizations.where({fair: true}), :id, :name_and_state) %>
   </div>
+  <%= f.fields_for :submission_details do |submission_details_form| %>
+    <%= f.hidden_field :submission_id, value: @submission.id %>
+    <div class="field">
+        <%= submission_details_form.label :file_url, "Digital Document for Submission" %><br>
+        <%= submission_details_form.text_field :file_url %><br>
+    </div>
+  <% end %>
   <div class="field">
   <% if params[:action] == 'new' %>
     <%= f.hidden_field :notes %>
@@ -39,15 +46,15 @@
     <% end %>
   <% end %>
   <% if params[:action] == 'new' %>
-    <%= f.hidden_field :approved, value: false %>
+    <%= f.hidden_field :status, value: "Incomplete" %>
   <% else %>
     <% if current_user.admin == true %>
       <div class="field">
-        <%= f.label :approved, "Approved?" %><br>
-        <%= f.check_box :approved %>
+        <%= f.label :status, "Status" %><br>
+        <%= f.select :status, options_for_select([ "Incomplete", "Pending", "Approved", "Rejected" ]) %>
       </div>
     <% else %>
-      <%= f.hidden_field :approved, value: :approved %>
+      <%= f.hidden_field :status, value: :status %>
     <% end %>
   <% end %>
   <% if params[:action] == 'new' %>
@@ -87,10 +94,6 @@
     <% end %>
   <% end %>
   <div class="actions">
-  	<% if params[:action] == 'new' %>
-    <%= f.submit "Next: Upload Submission Documents" %>
-  <% else %>
-    <%= f.submit "Next: Update Submission Documents" %>
-  <% end %>
+    <%= f.submit "Submit" %>
     </div>
 <% end %>
