--- a/app/views/submission_details/show.html.erb
+++ b/app/views/submission_details/show.html.erb
@@ -11,4 +11,5 @@
 </p>
 
 <%= link_to 'Edit', edit_submission_detail_path(@submission_detail) %> |
-<%= link_to 'Back', submission_details_path %>
+<%= link_to 'Back', submission_details_path %> | 
+<%= link_to 'Upload Another Submission Document', new_submission_submission_detail_path(@submission) %>
