--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -51,4 +51,5 @@
 </p>
 
 <%= link_to 'Edit', edit_submission_path(@submission) %> |
-<%= link_to 'Back', submissions_path %>
+<%= link_to 'Back', submissions_path %> | 
+<%= link_to 'Upload Submission Document', new_submission_submission_detail_path(@submission) %>
