--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -24,6 +24,10 @@
     <%= collection_select(:category, :award_id, Award.all, :id, :name) %>
   </div>
   <div class="field">
+  	<%= f.label :submission_file_type %><br>
+  	<%= f.select :submission_file_type, options_for_select(["Mixed (PDF and Images)", "PDF Only", "Images Only", "Video Only", "URL Link Only"]) %>
+  </div>
+  <div class="field">
     <%= f.label :document_max_number %><br>
     <%= f.text_field :document_max_number, size: 5 %>
   </div>
@@ -34,6 +38,10 @@
   <div class="field">
     <%= f.label :video_max_number %><br>
     <%= f.text_field :video_max_number, size: 5 %>
+  </div>
+  <div class="field">
+    <%= f.label :link_max_number %><br>
+    <%= f.text_field :link_max_number, size: 5 %>
   </div>
   <div class="field">
     <%= f.label :max_total_file_size %><br>
