--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -6,9 +6,11 @@
       <th>Name</th>
       <th>Code</th>
       <th>Award</th>
+      <th>Submission File Type</th>
       <th>Document max number</th>
       <th>Photo max number</th>
       <th>Video max number</th>
+      <th>Link max number</th>
       <th>Max total file size</th>
       <th>Description</th>
       <th>Rules</th>
@@ -25,9 +27,11 @@
         <td><%= category.name %></td>
         <td><%= category.code %></td>
         <td><%= category.award.name %></td>
+        <td><%= category.submission_file_type %></td>
         <td><%= category.document_max_number %></td>
         <td><%= category.photo_max_number %></td>
         <td><%= category.video_max_number %></td>
+        <td><%= category.link_max_number %></td>
         <td><%= category.max_total_file_size %></td>
         <td><%= sanitize(category.description) %></td>
         <td><%= sanitize(category.rules) %></td>
