--- a/app/views/submission_details/_form.html.erb
+++ b/app/views/submission_details/_form.html.erb
@@ -20,6 +20,10 @@
     <%= f.label :file_url %><br>
     <%= f.text_field :file_url %>
   </div>
+  <div class="field">
+  <%= f.label :attachment %><br />
+  <%= f.file_field :attachment %>
+</div>
   <div class="actions">
     <%= f.submit %>
   </div>
