--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -17,6 +17,7 @@
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -37,6 +38,7 @@
         <td><%= link_to 'Show', submission %></td>
         <td><%= link_to 'Edit', edit_submission_path(submission) %></td>
         <td><%= link_to 'Destroy', submission, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Add Digital File', new_submission_submission_detail_path(submission) %></td>
       </tr>
     <% end %>
   </tbody>
