--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -18,6 +18,7 @@
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -39,6 +40,7 @@
         <td><%= link_to 'Show', category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Add Score Item', new_category_score_item_path(category) %></td>
       </tr>
     <% end %>
   </tbody>
