--- a/app/views/submission_details/_form.html.erb
+++ b/app/views/submission_details/_form.html.erb
@@ -16,14 +16,22 @@
     <%= @submission.category.award.name %>: <%= @submission.category.code %> <%= @submission.category.name %> 
     (<%= @submission.organization.name %>)
   </div>
-  <div class="field">
-    <%= f.label :file_url %><br>
-    <%= f.text_field :file_url %>
-  </div>
-  <div class="field">
-  <%= f.label :attachment %><br />
-  <%= f.file_field :attachment %>
-</div>
+  <% if @submission.category.submission_file_type == "Video Only" || @submission.category.submission_file_type == "URL Link Only" %>
+    <div class="field">
+      <% if @submission.category.submission_file_type == "Video Only" %>
+        <%= f.label :file_url, "Please paste in the URL to your YouTube video." %><br>
+        <p>For example, http://www.youtube.com/watch?v=hnkhgu_hVDQ</p>
+      <% else %>
+        <%= f.label :file_url, "Site URL" %><br>
+      <% end %>
+      <%= f.text_field :file_url, size: 60 %>
+    </div>
+  <% else %>
+    <div class="field">
+      <%= f.label :attachment %><br />
+      <%= f.file_field :attachment %>
+    </div>
+  <% end %>
   <div class="actions">
     <%= f.submit %>
   </div>
