--- a/app/views/awards/_form.html.erb
+++ b/app/views/awards/_form.html.erb
@@ -17,11 +17,11 @@
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, size: "30x10" %>
   </div>
   <div class="field">
     <%= f.label :rules %><br>
-    <%= f.text_area :rules %>
+    <%= f.text_area :rules, size: "30x10" %>
   </div>
   <div class="field">
     <%= f.label :sponsor %><br>
