--- a/app/views/scores/_form.html.erb
+++ b/app/views/scores/_form.html.erb
@@ -25,10 +25,10 @@
   </div>
   <div class="field">
     <%= f.label :comments %><br>
-    <%= f.text_area :comments %>
+    <%= f.text_area :comments, size: "30x10" %>
   </div>
   <div class="field">
-    <%= f.label :disqualify %><br>
+    <%= f.label :disqualify, "Disqualify?" %><br>
     <%= f.check_box :disqualify %>
   </div>
   <div class="actions">
